--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ build-backend = "setuptools.build_meta"
 name = "pkg"
 dynamic = ["version", "dependencies"]
 
+[project.scripts]
+pkg = "pkg.__main__:main"
+
 [tool.setuptools_scm]
 write_to = "pkg/version.py"
 
