--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
-envlist = py38,py39
+envlist = py39,py311
 
 [testenv]
-deps = -rrequirements.txt
+deps = pytest
 commands =
     pytest {posargs:tests}
