--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -17,7 +17,9 @@ jobs:
         with:
           python-version: ${{ matrix.python }}
       - name: Install tox and any other packages
-        run: pip install tox
+        run: |
+          python -m pip install --upgrade pip
+          pip install tox
       - name: Run tox
         # Run tox using the version of Python in `PATH`
         run: tox -e py
