Runs locally but not able to find where the coverage report is

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,14 @@
 [tox]
-envlist = py39,py311
+envlist = py39,py311,coverage
 
 [testenv]
 deps = pytest
 commands =
     pytest {posargs:tests}
+
+[testenv:coverage]
+deps =
+    pytest
+    pytest-cov
+commands =
+    pytest --cov=pkg
