trying to fix coverage GA - 3: https://stackoverflow.com/a/75033525/1595171

--- a/.github/workflows/coverage.yaml
+++ b/.github/workflows/coverage.yaml
@@ -6,6 +6,9 @@ jobs:
   coverage:
     runs-on: ubuntu-latest
 
+    permissions:
+          contents: write
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
